initilization of the project

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -20,7 +20,7 @@ body {
 }
 body {
   scrollbar-width: thin;
-  scrollbar-color: #ff8c00 #f1f1f1;
+  scrollbar-color: #c4cf82 #f1f1f1;
 }
 
 body::-webkit-scrollbar {
