--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -33,6 +33,6 @@ body::-webkit-scrollbar-track {
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #ff8c00; 
+  background-color: #615d59; 
   border-radius: 10px; 
 }
